# agentic_ttrpg

./: .gitignore  README.md  pyproject.toml
agentic_ttrpg/: __main__.py  config.py  note_system.py  players.py  prompts.py  table_conversation.py  tools.py
context/: _player_generation_prompt.md  player_chloe.md  player_jules.md  player_marcus.md  player_maya.md  player_priya.md  player_sully.md
